--- a/SteelgoWebAppSolutions/FrontEndSAM/FrontEndSAM.csproj
+++ b/SteelgoWebAppSolutions/FrontEndSAM/FrontEndSAM.csproj
@@ -546,6 +546,48 @@
     <Content Include="Scripts\AppComponents\PlaneacionYControl\PeticionMontaje\Captura.js" />
     <Content Include="Scripts\AppComponents\PlaneacionYControl\PeticionMontaje\Handlers.js" />
     <Content Include="Scripts\AppComponents\PlaneacionYControl\PeticionMontaje\Render.js" />
+    <Content Include="Scripts\AppComponents\PND\AsignarRequisicion\Ajax.js" />
+    <Content Include="Scripts\AppComponents\PND\AsignarRequisicion\Captura.js" />
+    <Content Include="Scripts\AppComponents\PND\AsignarRequisicion\Handlers.js" />
+    <Content Include="Scripts\AppComponents\PND\AsignarRequisicion\Render.js" />
+    <Content Include="Scripts\AppComponents\PND\CapturaReportePruebas\Ajax.js" />
+    <Content Include="Scripts\AppComponents\PND\CapturaReportePruebas\Captura.js" />
+    <Content Include="Scripts\AppComponents\PND\CapturaReportePruebas\Handlers.js" />
+    <Content Include="Scripts\AppComponents\PND\CapturaReportePruebas\Render.js" />
+    <Content Include="Scripts\AppComponents\PND\CapturaReportePruebas\Seguridad.js" />
+    <Content Include="Scripts\AppComponents\PND\EntregaResultados\Ajax.js" />
+    <Content Include="Scripts\AppComponents\PND\EntregaResultados\Captura.js" />
+    <Content Include="Scripts\AppComponents\PND\EntregaResultados\Handlers.js" />
+    <Content Include="Scripts\AppComponents\PND\EntregaResultados\Render.js" />
+    <Content Include="Scripts\AppComponents\PND\ImpresionPruebas\Ajax.js" />
+    <Content Include="Scripts\AppComponents\PND\ImpresionPruebas\Captura.js" />
+    <Content Include="Scripts\AppComponents\PND\ImpresionPruebas\Handlers.js" />
+    <Content Include="Scripts\AppComponents\PND\ImpresionPruebas\Render.js" />
+    <Content Include="Scripts\AppComponents\PND\ListadoRequisicion\Ajax.js" />
+    <Content Include="Scripts\AppComponents\PND\ListadoRequisicion\Captura.js" />
+    <Content Include="Scripts\AppComponents\PND\ListadoRequisicion\Handlers.js" />
+    <Content Include="Scripts\AppComponents\PND\ListadoRequisicion\Seguridad.js" />
+    <Content Include="Scripts\AppComponents\PND\RequisicionesAsignadas\Ajax.js" />
+    <Content Include="Scripts\AppComponents\PND\RequisicionesAsignadas\Captura.js" />
+    <Content Include="Scripts\AppComponents\PND\RequisicionesAsignadas\Handlers.js" />
+    <Content Include="Scripts\AppComponents\PND\RequisicionPND\Ajax.js" />
+    <Content Include="Scripts\AppComponents\PND\RequisicionPND\Captura.js" />
+    <Content Include="Scripts\AppComponents\PND\RequisicionPND\Handlers.js" />
+    <Content Include="Scripts\AppComponents\PND\RequisicionPND\Render.js" />
+    <Content Include="Scripts\AppComponents\PND\RequisicionPND\Seguridad.js" />
+    <Content Include="Scripts\AppComponents\PND\ValidacionResultados\Ajax.js" />
+    <Content Include="Scripts\AppComponents\PND\ValidacionResultados\Captura.js" />
+    <Content Include="Scripts\AppComponents\PND\ValidacionResultados\Handlers.js" />
+    <Content Include="Scripts\AppComponents\PND\ValidacionResultados\Render.js" />
+    <Content Include="Scripts\AppComponents\PND\ValidacionResultados\Seguridad.js" />
+    <Content Include="Scripts\AppComponents\PQR\CrearPQR\Ajax.js" />
+    <Content Include="Scripts\AppComponents\PQR\CrearPQR\CrearPQR.js" />
+    <Content Include="Scripts\AppComponents\PQR\CrearPQR\Handler.js" />
+    <Content Include="Scripts\AppComponents\PQR\CrearPQR\Seguridad.js" />
+    <Content Include="Scripts\AppComponents\PQR\Listado\Ajax.js" />
+    <Content Include="Scripts\AppComponents\PQR\Listado\Handlers.js" />
+    <Content Include="Scripts\AppComponents\PQR\Listado\PQR.js" />
+    <Content Include="Scripts\AppComponents\PQR\Listado\Render.js" />
     <Content Include="Scripts\AppComponents\ServiciosTecnicos\AsignarRequisicion\Web.config" />
     <Content Include="Scripts\AppComponents\ServiciosTecnicos\CapturaReportePruebas\Web.config" />
     <Content Include="Scripts\AppComponents\ServiciosTecnicos\EntregaResultados\Web.config" />
@@ -568,6 +610,15 @@
     <Content Include="Scripts\AppComponents\Catalogos\Web.config" />
     <Content Include="Scripts\AppComponents\AvisoLlegada\Web.config" />
     <Content Include="Scripts\AppComponents\MedicionesClimatologicas\Web.config" />
+    <Content Include="Scripts\AppComponents\PND\AsignarRequisicion\Web.config" />
+    <Content Include="Scripts\AppComponents\PND\CapturaReportePruebas\Web.config" />
+    <Content Include="Scripts\AppComponents\PND\EntregaResultados\Web.config" />
+    <Content Include="Scripts\AppComponents\PND\ImpresionPruebas\Web.config" />
+    <Content Include="Scripts\AppComponents\PND\ListadoRequisicion\Web.config" />
+    <Content Include="Scripts\AppComponents\PND\RequisicionesAsignadas\Web.config" />
+    <Content Include="Scripts\AppComponents\PND\RequisicionPND\Web.config" />
+    <Content Include="Scripts\AppComponents\PND\ValidacionResultados\Web.config" />
+    <Content Include="Scripts\AppComponents\PQR\Web.config" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Icon.png" />
     <Content Include="Scripts\AppComponents\Armado\Ajax.js" />
@@ -1226,7 +1277,6 @@
     <Compile Include="Controllers\Catalogos\ObreroController.cs" />
     <Compile Include="Controllers\Catalogos\ObreroUbicacionController.cs" />
     <Compile Include="Controllers\Catalogos\SoldadorCertificacionController.cs" />
-    <Compile Include="Controllers\Catalogos\SoldadorCertificacionPopUpController.cs" />
     <Compile Include="Controllers\Catalogos\TipoObreroController.cs" />
     <Compile Include="Controllers\Catalogos\TipoTrabajosAdicionalesController.cs" />
     <Compile Include="Controllers\Catalogos\TrabajosAdicionalesController.cs" />
@@ -1253,11 +1303,12 @@
     <Compile Include="Controllers\PackingList\PackingListController.cs" />
     <Compile Include="Controllers\Pintura\PinturaController.cs" />
     <Compile Include="Controllers\PlaneacionYControl\PlaneacionYControlController.cs" />
+    <Compile Include="Controllers\PND\PNDController.cs" />
     <Compile Include="Controllers\popups\AgregarTipoTrabajoAdicionalController.cs" />
     <Compile Include="Controllers\popups\AgregarTrabajoAdicionalController.cs" />
     <Compile Include="Controllers\popups\EditaPQRController.cs" />
     <Compile Include="Controllers\popups\PopUpsController.cs" />
-    <Compile Include="Controllers\PQR\PQRController.cs" />
+    <Compile Include="Controllers\PQR\CatalogoPQRController.cs" />
     <Compile Include="Controllers\PreDespacho\PreDespachoController.cs" />
     <Compile Include="Controllers\Proxy\ProxyController.cs" />
     <Compile Include="Controllers\PruebasMaterial\CapturaPNDMaterialController.cs" />
@@ -1448,7 +1499,6 @@
     <Content Include="Views\Pintura\CargaCarroBackLog.cshtml" />
     <Content Include="Views\Pintura\DescargaCarro.cshtml" />
     <Content Include="Views\Pintura\LotesCapturaReporte.cshtml" />
-    <Content Include="Views\PQR\PQR.cshtml" />
     <Content Include="Views\ServiciosTecnicos\AsignarRequisicion.cshtml" />
     <Content Include="Views\ServiciosTecnicos\CapturaReportePruebas.cshtml" />
     <Content Include="Views\ServiciosTecnicos\EntregaResultados.cshtml" />
@@ -1457,7 +1507,6 @@
     <Content Include="Views\ServiciosTecnicos\ListadoRequisicion.cshtml" />
     <Content Include="Views\ServiciosTecnicos\RequisicionesAsignadas.cshtml" />
     <Content Include="Views\ServiciosTecnicos\ValidacionResultados.cshtml" />
-    <Content Include="Views\SoldadorCertificacionPopUp\_SoldadorCertificacion.cshtml" />
     <Content Include="Views\SoldadorCertificacion\ListadSoldadorCertificacion.cshtml" />
     <Content Include="Views\Soldadura\capturaSoldadura.cshtml" />
     <Content Include="Views\TipoJunta\TipoJunta.cshtml" />
@@ -1509,6 +1558,18 @@
     <Content Include="Views\Errors\accessdenied.cshtml" />
     <Content Include="Scripts\Widgets\GridStack\gridstack-extra.scss" />
     <Content Include="Scripts\Widgets\GridStack\gridstack.scss" />
+    <Content Include="Views\CatalogoPQR\CrearNuevoPQR.cshtml" />
+    <Content Include="Views\CatalogoPQR\ListadoPQR.cshtml" />
+    <Content Include="Views\PND\AsignacionRequisicion.cshtml" />
+    <Content Include="Views\PND\CapturaReporteRT.cshtml" />
+    <Content Include="Views\PND\EntregaPlacasGraficas.cshtml" />
+    <Content Include="Views\PND\ImpresionPruebas.cshtml" />
+    <Content Include="Views\PND\RequisicionesAsignadas.cshtml" />
+    <Content Include="Views\PND\RequisicionPND.cshtml" />
+    <Content Include="Views\PND\ValidacionRT.cshtml" />
+    <Content Include="Views\SoldadorCertificacion\AgregarNuevoSoldadorCertificacion.cshtml" />
+    <Content Include="Views\SoldadorCertificacion\ListadoSoldadoresCertificacion.cshtml" />
+    <Content Include="Views\WPS\crearWPS.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
