--- a/SteelgoWebApiSolutions/BackEndSAM/Web.config
+++ b/SteelgoWebApiSolutions/BackEndSAM/Web.config
@@ -23,17 +23,22 @@
     <add key="Sam.QuequeBitacora" value="FormatName:Direct=OS:df-app-sql-03\private$\bitacora" />
     <add key="Sam.QuequePrueba" value=".\Private$\prueba" />
     <add key="urlTemplates" value="~/App_Data/templates/" />
-    <add key="ActivarFolioConfiguracion" value="1" /> <!--0-Inactivo 1-activo-->
-    <add key="ActivarFolioConfiguracionIncidencias" value="1" /><!--0-Inactivo 1-activo-->
-    <add key="ActivarFolioConfiguracionCuantificacion" value="1" /><!--0-Inactivo 1-activo-->
-    <add key="ActivarFolioConfiguracionOrdenAlmacenaje" value="1" /><!--0-Inactivo 1-activo-->
-    <add key="ActivarFolioConfiguracionOrdenRecepcion" value="1" /><!--0-Inactivo 1-activo-->
+    <add key="ActivarFolioConfiguracion" value="1" />
+    <!--0-Inactivo 1-activo-->
+    <add key="ActivarFolioConfiguracionIncidencias" value="1" />
+    <!--0-Inactivo 1-activo-->
+    <add key="ActivarFolioConfiguracionCuantificacion" value="1" />
+    <!--0-Inactivo 1-activo-->
+    <add key="ActivarFolioConfiguracionOrdenAlmacenaje" value="1" />
+    <!--0-Inactivo 1-activo-->
+    <add key="ActivarFolioConfiguracionOrdenRecepcion" value="1" />
+    <!--0-Inactivo 1-activo-->
   </appSettings>
   <connectionStrings>
-    <add name="SqlServer" connectionString="server=MAYA\SQLEXPRESS;initial catalog=steelgo-sam3;User=admin;Password=Maya64;MultipleActiveResultSets=True;Connect Timeout=2000" />
-    <add name="SamLogging" connectionString="metadata=res://*/SamLogging.ModelSamLogging.csdl|res://*/SamLogging.ModelSamLogging.ssdl|res://*/SamLogging.ModelSamLogging.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MAYA\SQLEXPRESS;initial catalog=steelgo-samlogging;user id=admin;password=Maya64;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="Sam2Context" connectionString="metadata=res://*/Sam2.ModelSam2.csdl|res://*/Sam2.ModelSam2.ssdl|res://*/Sam2.ModelSam2.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MAYA\SQLEXPRESS;initial catalog=sam;persist security info=True;user id=admin;password=Maya64;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="SamContext" connectionString="metadata=res://*/Sam3.ModelSam3.csdl|res://*/Sam3.ModelSam3.ssdl|res://*/Sam3.ModelSam3.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MAYA\SQLEXPRESS;initial catalog=steelgo-sam3;user id=admin;password=Maya64;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SqlServer" connectionString="server=LAP6;initial catalog=steelgo-sam3;User=sa;Password=maftec06;MultipleActiveResultSets=True;Connect Timeout=2000" />
+    <add name="SamLogging" connectionString="metadata=res://*/SamLogging.ModelSamLogging.csdl|res://*/SamLogging.ModelSamLogging.ssdl|res://*/SamLogging.ModelSamLogging.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAP6\SQLEXPRESS;initial catalog=steelgo-samlogging;user id=SA;password=maftec06;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Sam2Context" connectionString="metadata=res://*/Sam2.ModelSam2.csdl|res://*/Sam2.ModelSam2.ssdl|res://*/Sam2.ModelSam2.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAP6\SQLEXPRESS;initial catalog=sam;persist security info=True;user id=SA;password=maftec06;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SamContext" connectionString="metadata=res://*/Sam3.ModelSam3.csdl|res://*/Sam3.ModelSam3.ssdl|res://*/Sam3.ModelSam3.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Lap6;initial catalog=steelgo-sam3;user id=sa;password=maftec06;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
